
# changes since last merge:

# previous changes:



* 17.09

 -- a new rety mechanism was implemented that allows a different
    integrator to be used if the primary integrator fails

 -- the electron Ni56 electron capture rates and energy losses
    were updated from Mazurek (1973) to LMP (2000).  Thanks to
    Carl Fields for this contribution.  Pull request #40


* 17.08

 -- fix to aprox21 from Aron Michel (HITS) that fills in missing
    reactions

 -- updated the helmholtz EOS to use the latest table from Frank
    Timmes (in particular, this is now denser, with 2x points in T and
    rho dimensions).  If you copied the old table, you need to make sure
    you are using the new table now.

 -- add stellar conductivities from Frank Timmes


* 17.06

 -- a new Fortran 90 port of VODE has been added

 -- the unit tests now require AMReX instead of BoxLib to build


* 17.01

 -- we've removed the option to integrate molar fractions and instead
    the ODE system always operates on mass fractions (the networks
    return derivatives of molar fractions and they are automatically
    converted).


* 16.12

 -- a new unit test, test_sdc, was created to test the SDC interface
    to the networks

 -- we now rely on the network module to provide aion_inv (1/aion)

 -- the VODE integrator now supports SDC integration


* 16.09

 -- num_rate_groups is now a property of the individual networks

 -- a new integration method, Rosenbrock, was added to the BS
    option (set ode_method)

 -- the number of RHS and Jac evaluations is now passed out
    of the burner through the burn_t type for diagnostic and
    load-balancing use

 -- support for spectral deferred correction coupling of the
    burner and hydro was added to the BS integrator


* 16.08

 -- Microphysics/eos/ has been renamed Microphysics/EOS/ to better
    conform to the conventions used in Castro and Maestro

 -- the User's Guide has been extensively updated
