@@ -85,3 +85,6 @@ renormalize_abundances   logical   .false.
 # issues and keep mass fractions positive in the integrator.  You may
 # have to increase the floor to, e.g. {\tt 1.d-20} if your rates are large.
 SMALL_X_SAFE                 real            1.0d-30
+
+# The maximum temperature for reactions in the integration.
+MAX_TEMP                     real            1.0d11
