@@ -1,6 +1,10 @@
 
 # changes since last merge:
 
+ -- the maximum temperature for reactions, MAX_TEMP, is now
+    an adjustable input parameter rather than being hardcoded
+    at 1.d11.
+
 # previous changes:
 
 
